Basic test for deployment

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <div>
     <div id="content" class="container">
+        Test for deployment
         <div class="row">
             <div ng-view>
             </div>
