Adds basic working version of attachments uploading.

--- a/index.html
+++ b/index.html
@@ -1,38 +1,22 @@
 <!DOCTYPE html>
-<html ng-app="angularWistia">
+<html lang="en">
 <head>
-    <title>Wistia Angular Test application</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Wistia Angular Test application</title>
+
     <link href="app.less" type="text/css" rel="stylesheet/less">
 </head>
-<body>
+<body ng-app="angularWistia">
 
 <!-- Livereload script for development only (stripped during dist build) -->
 <script src="http://localhost:35729/livereload.js" data-concat="false"></script>
 
-<!-- JS from Bower Components -->
-<script src="bower_components/less.js/dist/less-1.6.2.js" data-concat="false"></script>
-<script src="bower_components/jquery/jquery.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-<script src="bower_components/underscore/underscore.js"></script>
-<script src="bower_components/moment/moment.js"></script>
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-route/angular-route.js"></script>
-<script src="bower_components/angular-animate/angular-animate.js"></script>
-<script src="bower_components/angular-resource/angular-resource.js"></script>
-<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script src="bower_components/angular-ui-utils/ui-utils.js"></script>
-<!-- Add New Bower Component JS Above -->
-
-
-<!-- Main App JS -->
-<script src="app.js"></script>
-<!-- Add New Component JS Above -->
-
 <div>
     <div id="content" class="container">
-        Test for deployment
+        <div ng-include src="'features/header/header-partial.html'"></div>
         <div class="row">
             <div ng-view>
             </div>
@@ -40,5 +24,31 @@
     </div>
 </div>
 
+<!-- JS from Bower Components -->
+<script src="bower_components/less.js/dist/less-1.6.2.js" data-concat="false"></script>
+<script src="bower_components/lodash/lodash.js"></script>
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="bower_components/blueimp-file-upload/js/vendor/jquery.ui.widget.js"></script>
+<script src="bower_components/blueimp-file-upload/js/jquery.fileupload.js"></script>
+<script src="bower_components/blueimp-file-upload/js/jquery.fileupload-process.js"></script>
+<script src="bower_components/blueimp-file-upload/js/jquery.fileupload-angular.js"></script>
+<script src="bower_components/videogular/videogular.js"></script>
+<!-- Add New Bower Component JS Above -->
+
+
+<!-- Main App JS -->
+<script src="app.js"></script>
+<script src="features/attachments/sample-page/sample-page.js"></script>
+<script src="features/attachments/attachments-directive.js"></script>
+<script src="features/header/header-partial.js"></script>
+<script src="features/attachments/media-host-service/wistia-constants.js"></script>
+<script src="features/attachments/media-host-service/wistia-service.js"></script>
+<!-- Add New Component JS Above -->
 </body>
 </html>
