--- a/features/attachments/sample-page/sample-page.html
+++ b/features/attachments/sample-page/sample-page.html
@@ -4,7 +4,9 @@
         <div class="panel-body">
             Item description
             <!-- we are using wistia project id as item id to filter the media -->
-            <div aw-attachments owner-id="{{itemId}}" upload-options="uploadOptions"></div>
+            <div aw-attachments owner-id="{{itemId}}"
+                 viewer="showVideoPlayer(media)"
+                 upload-options="uploadOptions"></div>
         </div>
     </div>
 </div>
