Adds media player

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <script src="bower_components/blueimp-file-upload/js/jquery.fileupload-process.js"></script>
 <script src="bower_components/blueimp-file-upload/js/jquery.fileupload-angular.js"></script>
 <script src="bower_components/videogular/videogular.js"></script>
+<script src="bower_components/videogular-controls/vg-controls.js"></script>
 <!-- Add New Bower Component JS Above -->
 
 
@@ -49,6 +50,11 @@
 <script src="features/header/header-partial.js"></script>
 <script src="features/attachments/media-host-service/wistia-constants.js"></script>
 <script src="features/attachments/media-host-service/wistia-service.js"></script>
+<script src="features/player/player-directive.js"></script>
+<script src="features/player/modal-viewer/modal-viewer.js"></script>
 <!-- Add New Component JS Above -->
+
+<script src="//fast.wistia.com/assets/external/E-v1.js" data-remove="false" async></script>
+
 </body>
 </html>
