--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link href="app.less" type="text/css" rel="stylesheet/less">
 </head>
-<body ng-app="angularWistia">
+<body ng-app="angular-wistia">
 
 <!-- Livereload script for development only (stripped during dist build) -->
 <script src="http://localhost:35729/livereload.js" data-concat="false"></script>
