Refactors the attachments directive      - to separate state management into controller      - to create async-click directive that manages async state         management and provide visual feedback during the async         action.

--- a/features/attachments/attachments-directive.html
+++ b/features/attachments/attachments-directive.html
@@ -4,12 +4,11 @@
             Attachments <i class="fa" ng-class="collapsed?'fa-chevron-right':'fa-chevron-down'"></i>
         </a>
 
-        <div uib-collapse="collapsed" class="panel-attachments">
+        <div ng-hide="collapsed" class="panel-attachments">
             <div class="attachment-item" ng-repeat="a in attachments" ng-click="triggerViewer(a)">
                 <span class="bottom-centered attachment-label ellipsis">{{a.name}}</span>
-                <i class="fa top-right-cornered clickable action"
-                   ng-class="!a.$deleting ? 'fa-times':'fa-spinner fa-spin'"
-                   ng-click="removeAttachment(a); $event.stopPropagation();"></i>
+                <i class="fa fa-times top-right-cornered clickable fa-action-icon action"
+                   aw-async-click="removeAttachment(a);"></i>
                 <img ng-src="{{a.thumbnail.url}}" class="centered thumbnail">
                 <i class="fa fa-play-circle fa-3x centered"></i>
             </div>
