--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <script src="features/player/player-directive.js"></script>
 <script src="features/player/modal-viewer/modal-viewer.js"></script>
 <script src="features/common/directives/aw-async-click/aw-async-click.js"></script>
+<script src="features/common/directives/round-progress/upload-progress-directive.js"></script>
 <!-- Add New Component JS Above -->
 
 <script src="//fast.wistia.com/assets/external/E-v1.js" data-remove="false" async></script>
