- Refactors reference to Wistia as promise - Introduces unit test for wistia player.

--- a/features/attachments/attachments-directive.html
+++ b/features/attachments/attachments-directive.html
@@ -18,7 +18,7 @@
 
             <div class="attachment-item" ng-repeat="file in queue" file-upload-progress="file.$progress()">
                 <span class="bottom-centered ellipsis">{{file.name}}</span>
-                <div awUploadProgress progress='num' class="centered"></div>
+                <div aw-upload-progress aw-progress='num' class="centered"></div>
             </div>
 
             <div class="attachment-item">
