--- a/features/player/modal-viewer/modal-viewer.html
+++ b/features/player/modal-viewer/modal-viewer.html
@@ -5,5 +5,5 @@
     </button>
 </div>
 <div class="modal-body">
-    <div wistia-player src-hashed-id="media.hashed_id" class="wistia-player"></div>
+    <div wistia-player src-hashed-id="media.hashed_id" auto-play="true" class="wistia-player"></div>
 </div>
