plugin test checkin

--- a/plugin.html
+++ b/plugin.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="dest/plugin/app.min.css">
     <link type="text/css" rel="stylesheet" href="dest/plugin/default-plugins.min.css">
 
-    <title>Plugin Test page</title>
+    <title>Plugin Test page -temp</title>
 
     <style>
         .full-page-plugin-header {
