Fixes documentation menu styling.

--- a/main.html
+++ b/main.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Angular Wistia Documentation and Demos</title>
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet"
           href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/main.css">
 </head>
 
@@ -144,6 +145,8 @@
 
 <script src="js/main.module.js"></script>
 <script src="js/main.controller.js"></script>
+<script src="js/menu.directives.js"></script>
+<script src="js/filters.js"></script>
 
 </body>
 </html>
