--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 
 <md-sidenav class="md-sidenav-left site-sidenav" md-component-id="left" flex md-is-locked-open="$mdMedia('gt-sm')">
     <header class="nav-header">
-        <a ng-href="/" class="docs-logo">
+        <a ng-href="#/introduction" class="docs-logo">
             <img src="img/angular-wistia.png">
 
             <h1 class="md-heading docs-logotype">angular-wistia</h1>
@@ -50,12 +50,13 @@
             <md-button class="md-icon-button" hide-gt-sm aria-label="Toggle Menu" ng-click="vm.openMenu()">
                 <md-icon md-font-icon="fa-bars" class="fa" style="color:#0013A2;"></md-icon>
             </md-button>
-            <h2 class="md-toolbar-item">Wistia <span hide-md hide-sm>directives and services </span>for Angular</h2>
+            <h2 class="md-toolbar-item">Angular <span hide-md hide-sm>directives and services </span>for Wistia</h2>
             <span flex></span>
             <div class="md-toolbar-item" layout="row">
                 <md-button class="md-icon-button"
                            aria-label="Install with Bower"
                            target="_blank"
+                           ng-disabled="true"
                            ng-href="https://github.com/angular/bower-material">
                     <md-tooltip md-autohide>Install with Bower</md-tooltip>
                     <md-icon md-svg-src="img/icons/bower-logo.svg"></md-icon>
@@ -63,6 +64,7 @@
                 <md-button class="md-icon-button"
                            aria-label="Install with NPM"
                            target="_blank"
+                           ng-disabled="true"
                            ng-href="https://www.npmjs.com/package/angular-wistia">
                     <md-tooltip md-autohide>Install with NPM</md-tooltip>
                     <md-icon md-svg-src="img/icons/npm-logo.svg" style="transform: scale(1.6)"></md-icon>
@@ -70,7 +72,7 @@
                 <md-button class="md-icon-button"
                            aria-label="View Source on Github"
                            target="_blank"
-                           ng-href="{{BUILDCONFIG.repository}}/{{menu.version.current.github}}">
+                           ng-href="https://github.com/basghar/angular-wistia">
                     <md-tooltip md-autohide>View Github</md-tooltip>
                     <md-icon md-svg-src="img/icons/github-icon.svg" style="color: black"></md-icon>
                 </md-button>
@@ -132,7 +134,7 @@
                 </div>
         -->
     </md-toolbar>
-    <md-content ng-view md-scroll-y flex layout-padding></md-content>
+    <md-content ng-view md-scroll-y flex class="doc-content"></md-content>
 </div>
 
 <!-- Angular Material Dependencies -->
