Adds angular-wistia library.

--- a/main.html
+++ b/main.html
@@ -147,6 +147,7 @@
 <!-- Angular Material Javascript now available via Google CDN; version 0.11.2 used here -->
 <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js"></script>
 
+<script src="dist/angular-wistia.js"></script>
 <script src="js/main.module.js"></script>
 <script src="js/main.controller.js"></script>
 <script src="js/menu.directives.js"></script>
